- Players leaving to spectator mode with <0.2.8.2 clients are handled like
  spectators of 0.2.8.2 clients: they stay visible to the others.
- Kick statistics are now persistent across server runs.
- MESSAGE_OF_DAY is now displayed fullscreen if both server and client support it
- Manual fullscreen messages can be triggered with 
  FULLSCREEN_MESSAGE <timeout> <message content>

  Bugfixes:
- When extrapolating, the game's sensors never detected own or teammates' walls,
  it mistook them for enemy walls.
- The acceleration and boost system always used settings for enemy walls instead of
  settings for team players' walls. That means that old clients connecting to a
  0.2.8.3+ server that has CYCLE_ACCEL_ENEMY and CYCLE_ACCEL_TEAM set to different
  values experience syncing problems. The default behavior therefore is to lock 0.2.8.2
  and earlier out of your server if you set one of them away from the default. 
  If you want to set both accelerations away from the default, but to the same value,
  there won't be a compatibility problem; in that case, set CYCLE_ACCEL_ENEMY_OVERRIDE
  and CYCLE_ACCEL_TEAM_OVERRIDE to 0 and old clients will be allowed in. However, you
  should manually lock out players with 0.2.7 clients, for example by modifying
  CYCLE_ACCEL_RIM a tiny bit.
- "Team Red" bug. If the server allows maximally two teams, no team ever
  gets to be Team Red.
- Phasing made even more difficult; nice side effect of the fix is
  reduced network bandwidth usage.
- Speed gauge resets between rounds.

Changes since 0.2.8.1:
- Timestamps and teamscores added to scorelog.txt
- Dedicated server now works on FreeBSD and OpenBSD
- User running the dedicated server is called "armagetronad" again, the
  longer "armagetronad-dedicated" caused problems with BSD
- Test versions refuse to connect to servers more than one version ahead
- Prepared client for respawns
- Team spawn formation is now configurable
- Added reasons to bans
- Added spectator autokicking